Jira RPU-61 - Homepage Spotlight text overlap on 1550px wide and greater screens fixed with margin left - user/password issue resolved by swapping href var value to remade top section, rest is css only

--- a/sites/all/themes/elx_front/sass/components/homepage/_homepage.scss
+++ b/sites/all/themes/elx_front/sass/components/homepage/_homepage.scss
@@ -154,6 +154,7 @@ body.page-home-page {
       padding: 75px;
       width: 75%;
       margin: auto;
+      margin-left: 75px;
     }
 
     .views-field-field-featured-image img {
